src/test/ui/issues/issue-55511.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/issue-55511.rs:13:29
   |
LL |     let b = Some(Cell::new(&a));
   |                             ^ borrowed value does not live long enough
...
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
